loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:1: error: not found: value estSurBiscuits
while(!estSurBiscuits()){
       ^